# AIVish

./: LICENSE.txt  README.md  genvish.py  pyproject.toml
aivish/: abuse.py  aivish.py  input_args.py  keyexcept_decorator.py  logo.py  run.py
